cmake_minimum_required(VERSION 3.9)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS -std=c++14)
macro(source_group_by_dir source_files)
	if(MSVC)
		set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
		foreach(sgbd_file ${${source_files}})
			string(REGEX REPLACE ${sgbd_cur_dir}/\(.*\) \\1 sgbd_fpath ${sgbd_file})
			string(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
			string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
			string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
			if(sgbd_nogroup)
				set(sgbd_group_name "\\")
			endif(sgbd_nogroup)
			source_group(${sgbd_group_name} FILES ${sgbd_file})
		endforeach(sgbd_file)
	endif(MSVC)
endmacro(source_group_by_dir)

project(cgdrive CXX)
MESSAGE(STATUS "Project Directory: ${PROJECT_SOURCE_DIR}")
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON) 
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(PROJECT_SOURCE_PATH ${PROJECT_SOURCE_DIR})
if (MSVC)
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DUNICODE /DWIN32 /DWIN32_LEAN_AND_MEAN /EHsc")
endif()

ADD_SUBDIRECTORY(src)